Fix alignment of "You saved" title on the appointment page
FRON-1348

--- a/mobile/client/src/app/appointment-page/appointment-page.component.scss
+++ b/mobile/client/src/app/appointment-page/appointment-page.component.scss
@@ -244,25 +244,27 @@ page-appointment {
   .CheckOut-saved {
     $color-mint-bg: rgba(93, 202, 145, 0.05);
 
-    padding: pxtovw(8px) pxtovw(12px);
-    margin-top: pxtovw(16px);
+    height: pxtovw(32px);
+    padding: 0 pxtovw(12px);
+    margin: pxtovw(8px) 0;
     font-size: pxtovw(18px);
     font-weight: 500;
-    line-height: pxtovw(24px);
+    //line-height: pxtovw(24px);
     color: color($colors-shared, darkMint);
     background: $color-mint-bg;
     border: pxtovw(1px) solid color($colors-shared, darkMint);
     border-radius: pxtovw(8px);
 
     .CheckOut-savedAmount {
-      font-size: pxtovw(28px);
-      line-height: pxtovw(32px);
+      font-size: pxtovw(24px);
+      //line-height: pxtovw(32px);
       text-align: right;
 
       sup {
         position: relative;
         top: pxtovw(-6px);
-        font-size: pxtovw(24px);
+        font-size: pxtovw(14px);
+        font-weight: 700;
       }
     }
   }
